@@ -202,6 +202,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #11159: SAX parser now supports unicode file names.
+
 - Issue #6972: The zipfile module no longer overwrites files outside of
   its destination path when extracting malicious zip files.
 
